; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ksz884x.c_netdev_get_regs_len.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ksz884x.c_netdev_get_regs_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hw_regs = type { i64, i64 }
%struct.net_device = type { i32 }

@hw_regs_range = common dso_local global %struct.hw_regs* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @netdev_get_regs_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @netdev_get_regs_len(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.hw_regs*, align 8
  %4 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.hw_regs*, %struct.hw_regs** @hw_regs_range, align 8
  store %struct.hw_regs* %5, %struct.hw_regs** %3, align 8
  store i32 64, i32* %4, align 4
  br label %6

6:                                                ; preds = %14, %1
  %7 = load %struct.hw_regs*, %struct.hw_regs** %3, align 8
  %8 = getelementptr inbounds %struct.hw_regs, %struct.hw_regs* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load %struct.hw_regs*, %struct.hw_regs** %3, align 8
  %11 = getelementptr inbounds %struct.hw_regs, %struct.hw_regs* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp sgt i64 %9, %12
  br i1 %13, label %14, label %31

14:                                               ; preds = %6
  %15 = load %struct.hw_regs*, %struct.hw_regs** %3, align 8
  %16 = getelementptr inbounds %struct.hw_regs, %struct.hw_regs* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.hw_regs*, %struct.hw_regs** %3, align 8
  %19 = getelementptr inbounds %struct.hw_regs, %struct.hw_regs* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = sub nsw i64 %17, %20
  %22 = add nsw i64 %21, 3
  %23 = sdiv i64 %22, 4
  %24 = mul nsw i64 %23, 4
  %25 = load i32, i32* %4, align 4
  %26 = sext i32 %25 to i64
  %27 = add nsw i64 %26, %24
  %28 = trunc i64 %27 to i32
  store i32 %28, i32* %4, align 4
  %29 = load %struct.hw_regs*, %struct.hw_regs** %3, align 8
  %30 = getelementptr inbounds %struct.hw_regs, %struct.hw_regs* %29, i32 1
  store %struct.hw_regs* %30, %struct.hw_regs** %3, align 8
  br label %6

31:                                               ; preds = %6
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
